[edit]: check docker version

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,16 +1,21 @@
-node {
-    def WORKSPACE = "/var/lib/jenkins/workspace/"
-    def dockerImageTag = "star-bank/authorization-microservice"
-
-    try {
-        notifyBuild('STARTED')
-        stage('check-repository-clone') {
-            sh "ls -l"
+pipeline {
+    agent any
+    environment {
+        PROJECT_NAME="star-bank-authorization-microservice"
+        VERSION="0.0.1"
+    }
+    stages {
+        stage('clone-repository-stage') {
+            steps {
+                echo "Repository successfully cloned. For project: ${PROJECT_NAME}"
+                sh "ls -l"
+            }
         }
-    } catch(e) {
-        currentBuild.result = "FAILED"
-        throw e
-    } finally {
-        notifyBuild(currentBuild.result)
+        stage('build-jar-stage') {
+            steps {
+                sh "mvn clean install -DskipTests"
+                sh "ls -l"
+            }
+        }
     }
 }
