--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('build-jar-stage') {
             steps {
-                sh "./mvnw clean install -DskipTests"
+                sh "mvn clean install -DskipTests"
                 sh "ls -l"
             }
         }
